--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </header>
 
-      <!-- home cards -->
+      <!-- home cards 1 -->
       <section class="home-cards">
         <div>
           <img src="./img/surface-laptop.jpg" alt="" />
@@ -100,6 +100,63 @@
             >Shop now <i class="fas fa-chevron-right"></i
           ></a>
         </div>
+      </section>
+
+      <!-- home cards 2 -->
+      <section class="home-cards">
+        <div>
+          <img src="./img/desk-laptop.jpg" alt="" />
+          <h3>New Surface Duo for Business</h3>
+          <p>
+            Enhance your productivity with the do-it-all, dual-screen dynamo.
+          </p>
+          <a href="#">Pre-order now <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/faces.jpg" alt="" />
+          <h3>Resilience at work</h3>
+          <p>
+            Keep your team connected, wherever they are, with Microsoft Teams.
+          </p>
+          <a href="#">Learn more <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/desk-laptop.jpg" alt="" />
+          <h3>Microsoft 365 for business</h3>
+          <p>Powerful services that can help you run and grow your business.</p>
+          <a href="#">Shop now <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/escalator.jpg" alt="" />
+          <h3>AI Business School</h3>
+          <p>
+            Become AI-ready with a roadmap to success, online and on-demand.
+          </p>
+          <a href="#">Learn more <i class="fas fa-chevron-right"></i></a>
+        </div>
+      </section>
+
+      <!-- olympics -->
+      <section class="olympics">
+        <div class="content">
+          <h2>Finding new ways to play</h2>
+          <p>
+            When in-person Special Olympics events were cancelled, an Xbox
+            virtual gaming event helped the athletes compete in new and exciting
+            ways
+          </p>
+          <a class="btn" href="#"
+            >Read their stories<i class="fas fa-chevron-right"></i
+          ></a>
+        </div>
+      </section>
+
+      <!-- Follow -->
+      <section class="follow">
+        <p>Follow Microsoft</p>
+        <a href="http://facebook.com"><i class="fab fa-facebook"></i></a>
+        <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+        <a href="http://linkedin.com"><i class="fab fa-linkedin"></i></a>
       </section>
     </div>
   </body>
