--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
         <ul class="right-menu">
           <li>
-            <a href="#">Search<i class="fas fa-search"></i></a>
+            <a href="#">Search<i class="fas fa-search fa-2x"></i></a>
           </li>
           <li>
-            <a href="#">Cart<i class="fas fa-shopping-cart"></i></a>
+            <a href="#">Cart<i class="fas fa-shopping-cart fa-2x"></i></a>
           </li>
           <li>
-            <a href="#">Sign in<i class="far fa-user-circle"></i></a>
+            <a href="#">Sign in<i class="far fa-user-circle fa-2x"></i></a>
           </li>
         </ul>
       </nav>
@@ -159,5 +159,92 @@
         <a href="http://linkedin.com"><i class="fab fa-linkedin"></i></a>
       </section>
     </div>
+
+    <!-- Links -->
+
+    <section class="links">
+      <div class="links-inner">
+        <ul>
+          <li><h3>What's new</h3></li>
+          <li><a href="#">Surface Duo</a></li>
+          <li><a href="#">Surface Go 2</a></li>
+          <li><a href="#">Surface Book 3</a></li>
+          <li><a href="#">Microsoft 365</a></li>
+          <li><a href="#">Surface Pro X</a></li>
+          <li><a href="#">Windows 10 apps</a></li>
+        </ul>
+        <ul>
+          <li><h3>Microsoft Store</h3></li>
+          <li><a href="#">Account profile</a></li>
+          <li><a href="#">Download Center</a></li>
+          <li><a href="#">Microsoft Store support</a></li>
+          <li><a href="#">Returns</a></li>
+          <li><a href="#">Store locations</a></li>
+          <li><a href="#">Virtual workshops and training</a></li>
+          <li><a href="#">Microsoft Store Promise</a></li>
+        </ul>
+        <ul>
+          <li><h3>Education</h3></li>
+          <li><a href="#">Microsoft in education</a></li>
+          <li><a href="#">Office for students</a></li>
+          <li><a href="#">Office 365 for schools</a></li>
+          <li><a href="#">Deals for students & parents</a></li>
+          <li><a href="#">Microsoft Azure in education</a></li>
+        </ul>
+        <ul>
+          <li><h3>Enterprise</h3></li>
+          <li><a href="#">Azure</a></li>
+          <li><a href="#">AppSource</a></li>
+          <li><a href="#">Automotive</a></li>
+          <li><a href="#">Government</a></li>
+          <li><a href="#">Healthcare</a></li>
+          <li><a href="#">Manufacturing</a></li>
+          <li><a href="#">Financial services</a></li>
+          <li><a href="#">Retail</a></li>
+        </ul>
+        <ul>
+          <li><h3>Developer</h3></li>
+          <li><a href="#">Microsoft Visual Studio</a></li>
+          <li><a href="#">Windows Dev Center</a></li>
+          <li><a href="#">Developer Center</a></li>
+          <li><a href="#">Microsoft developer program</a></li>
+          <li><a href="#">Channel 9</a></li>
+          <li><a href="#">Office Dev Center</a></li>
+          <li><a href="#">Microsoft Garage</a></li>
+        </ul>
+        <ul>
+          <li><h3>Company</h3></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">About Microsoft</a></li>
+          <li><a href="#">Company news</a></li>
+          <li><a href="#">Privacy at Microsoft</a></li>
+          <li><a href="#">Investors</a></li>
+          <li><a href="#">Diversity and inclusion</a></li>
+          <li><a href="#">Accessibility</a></li>
+          <li><a href="#">Security</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-inner">
+        <div>
+          <i class="fas fa-globe-europe fa-2x"></i>
+          <p>English (Europe)</p>
+        </div>
+
+        <ul>
+          <li><a href="#">Sitemap</a></li>
+          <li><a href="#">Contact Microsoft</a></li>
+          <li><a href="#">Privacy & cookies</a></li>
+          <li><a href="#">Terms of use</a></li>
+          <li><a href="#">Trademarks</a></li>
+          <li><a href="#">Safety & eco</a></li>
+          <li><a href="#">About our ads</a></li>
+          <li><a href="#">&copy; Microsoft 2020</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
